--- a/resources/scss/ceres/widgets/Common/_image-box-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-box-widget.scss
@@ -195,16 +195,8 @@
 /* Compatibility for IE */
 /* display img with optimal aspect ratio */
 html.ie {
-    .widget-image-box.widget-proportional {
+    .widget-image-box .img-cover {
         min-height: auto;
-        padding-bottom: 0 !important;
-
-        .img-cover {
-            width: 100%;
-            top: auto;
-            left: auto;
-            transform: none;
-            position: relative;
-        }
+        min-width: auto;
     }
 }
