CHANGE CategoryView - add placeholder for filters

--- a/resources/views/Category/Item/CategoryView.twig
+++ b/resources/views/Category/Item/CategoryView.twig
@@ -65,7 +65,13 @@
 
                             {% set overrideSearchFilters = LayoutContainer.show("Ceres::Search.Filter", facets ) %}
                             {% if overrideSearchFilters | trim is empty %}
-                                <item-filter-list :facet-data="{{ facets | json_encode }}"></item-filter-list>
+                                <item-filter-list :facet-data="{{ facets | json_encode }}">
+                                    {% if facets | length > 0 %}
+                                        <a class="btn btn-link filter-toggle" href="#filterCollapse">
+                                            <i class="fa fa-sliders default-float" aria-hidden="true"></i> {{ trans("Ceres::Template.itemFilter") }}
+                                        </a>
+                                    {% endif %}
+                                </item-filter-list>
                             {% else %}
                                 {{ overrideSearchFilters }}
                             {% endif %}
