--- a/resources/views/ItemList/Components/Filter/ItemFilterList.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterList.twig
@@ -3,7 +3,7 @@
         {{ component( "Ceres::ItemList.Components.Filter.ItemFilter") }}
         {{ component( "Ceres::ItemList.Components.Filter.ItemFilterPrice") }}
 
-        <a class="btn btn-link filter-toggle" data-toggle="collapse" href="#filterCollapse" aria-expanded="false" aria-controls="filterCollapse" @click="toggleOpeningState()">
+        <a class="btn btn-link filter-toggle" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="toggleOpeningState()">
             <i class="fa fa-sliders default-float" aria-hidden="true"></i> {{ trans("Ceres::Template.itemFilter") }}
         </a>
 
@@ -15,7 +15,7 @@
 
                 <div class="row">
                     <div class="col-xs-12 text-xs-right">
-                        <button type="button" class="btn btn-primary btn-medium" data-toggle="collapse" href="#filterCollapse" aria-expanded="false" aria-controls="filterCollapse" @click="toggleOpeningState()">
+                        <button type="button" class="btn btn-primary btn-medium" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="toggleOpeningState()">
                             <i class="fa fa-times" aria-hidden="true"></i> {{ trans("Ceres::Template.itemClose") }}
                         </button>
                     </div>
