--- a/resources/views/ItemList/ItemListView.twig
+++ b/resources/views/ItemList/ItemListView.twig
@@ -27,7 +27,7 @@
                                 :pagination-values="{{ searchOptions.itemsPerPage | json_encode }}"></items-per-page>
                             {% set overrideSearchFilters = LayoutContainer.show("Ceres::Search.Filter", facets) %}
                             {% if overrideSearchFilters | trim is empty %}
-                                <item-filter-list :facet-data="{{ facets | json_encode }}"></item-filter-list>
+                                <item-filter-list :is-active="true" :facet-data="{{ facets | json_encode }}"></item-filter-list>
                             {% else %}
                                 {{ overrideSearchFilters }}
                             {% endif %}
