--- a/resources/views/Category/Item/CategoryView.twig
+++ b/resources/views/Category/Item/CategoryView.twig
@@ -42,27 +42,13 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="list-wrapper">
-                            {#
-                                test TWIG components
-                            #}
                             {% include "Ceres::Category.Item.Partials.CategorySorting" with { 'sortingData': searchOptions.sorting, 'selectedSorting': itemSorting } %}
+
                             {% include "Ceres::Category.Item.Partials.ItemsPerPage" with { 'itemsPerPage': searchOptions.itemsPerPage, 'selectedValue': itemsPerPage } %}
 
-                            <item-list-sorting template="#vue-item-list-sorting" :sorting-list="{{ searchOptions.sorting | json_encode }}" :default-sorting="{{ searchOptions.defaultSorting | json_encode }}">
-                                <div class="list-sort">
-                                    <select class="custom-select">
-                                        <option>{{ searchOptions.sorting[itemSorting] }}</option>
-                                    </select>
-                                </div>
-                            </item-list-sorting>
-
-                            <items-per-page template="#vue-items-per-page" :pagination-values="{{ searchOptions.itemsPerPage | json_encode }}">
-                                <div class="list-itemsperpage">
-                                    <select class="custom-select">
-                                        <option>{{ itemsPerPage }}</option>
-                                    </select>
-                                </div>                                
-                            </items-per-page>
+                            <!-- <item-list-sorting template="#vue-item-list-sorting" :sorting-list="{{ searchOptions.sorting | json_encode }}" :default-sorting="{{ searchOptions.defaultSorting | json_encode }}"></item-list-sorting>
+                            
+                            <items-per-page template="#vue-items-per-page" :pagination-values="{{ searchOptions.itemsPerPage | json_encode }}"></items-per-page> -->
 
                             {% set overrideSearchFilters = LayoutContainer.show("Ceres::Search.Filter", facets ) %}
                             {% if overrideSearchFilters | trim is empty %}
@@ -88,10 +74,10 @@
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination :total-items="{{ itemCountTotal }}"></pagination>
-                    <noscript>
-                        {% include "Ceres::Category.Item.Partials.Pagination" %}
-                    </noscript>
+                    <!-- <pagination :total-items="{{ itemCountTotal }}"></pagination> -->
+                    {% include "Ceres::Category.Item.Partials.Pagination" %}
+                    <!-- <noscript>
+                    </noscript> -->
                 </div>
             </div>
         {% endif %}
@@ -176,10 +162,10 @@
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination :total-items="{{ itemCountTotal }}"></pagination>
-                    <noscript>
-                        {% include "Ceres::Category.Item.Partials.Pagination" %}
-                    </noscript>
+                    <!-- <pagination :total-items="{{ itemCountTotal }}"></pagination> -->
+                    {% include "Ceres::Category.Item.Partials.Pagination" %}
+                    <!-- <noscript>
+                    </noscript> -->
                 </div>
             </div>
         {% endif %}
