--- a/resources/views/Category/Item/CategoryView.twig
+++ b/resources/views/Category/Item/CategoryView.twig
@@ -37,7 +37,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="list-wrapper">
-                            {% include "Ceres::Category.Item.Partials.CategorySorting" with { 'sortingData': searchOptions.sorting, 'selectedSorting': itemSorting } %}
+                            {% include "Ceres::Category.Item.Partials.ItemSorting" with { 'sortingData': searchOptions.sorting, 'selectedSorting': itemSorting } %}
 
                             {% include "Ceres::Category.Item.Partials.ItemsPerPage" with { 'itemsPerPage': searchOptions.itemsPerPage, 'selectedValue': itemsPerPage } %}
 
