--- a/resources/views/ItemList/ItemListView.twig
+++ b/resources/views/ItemList/ItemListView.twig
@@ -1,13 +1,12 @@
 {% extends getPartial('page-design') %}
 
+{% set overrideSearchFilters = LayoutContainer.show("Ceres::Search.Filter", facets) %}
+
 {% block PageBody %}
 
-    {{ component( "Ceres::ItemList.Components.ItemList" ) }}
-    {{ component( "Ceres::ItemList.Components.ItemListSorting" ) }}
-    {{ component( "Ceres::ItemList.Components.ItemsPerPage" ) }}
-    {{ component( "Ceres::ItemList.Components.Pagination" ) }}
     {{ component( "Ceres::ItemList.Components.Filter.ItemFilterList") }}
     {{ component( "Ceres::ItemList.Components.Filter.ItemFilterTagList") }}
+    {{ component( "Ceres::ItemList.Components.ItemList" ) }}
 
     <div class="categoriegrid page-content container-max">
         <div class="row m-t-1">
@@ -21,11 +20,10 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="list-wrapper">
-                            <item-list-sorting template="#vue-item-list-sorting" :sorting-list="{{ searchOptions.sorting | json_encode }}" :default-sorting="{{ searchOptions.defaultSorting | json_encode }}"></item-list-sorting>
-                            <items-per-page
-                                template="#vue-items-per-page"
-                                :pagination-values="{{ searchOptions.itemsPerPage | json_encode }}"></items-per-page>
-                            {% set overrideSearchFilters = LayoutContainer.show("Ceres::Search.Filter", facets) %}
+                            {% include "Ceres::Category.Item.Partials.ItemSorting" with { 'sortingData': searchOptions.sorting, 'selectedSorting': itemSorting } %}
+
+                            {% include "Ceres::Category.Item.Partials.ItemsPerPage" with { 'itemsPerPage': searchOptions.itemsPerPage, 'selectedValue': itemsPerPage } %}
+
                             {% if overrideSearchFilters | trim is empty %}
                                 <item-filter-list :is-active="true" :facet-data="{{ facets | json_encode }}"></item-filter-list>
                             {% else %}
@@ -42,7 +40,7 @@
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination :total-items="{{ itemCountTotal }}"></pagination>
+                    {% include "Ceres::Category.Item.Partials.Pagination" %}
                 </div>
             </div>
         {% endif %}
@@ -67,11 +65,9 @@
 
                 {# <div id="vue-rendered-item-list" class="item-list-frame"> #}
                     {# TODO ersetzten mit twig #}
-                    {# <item-list
-                        :item-data="{{ itemList | json_encode }}"
-                        :total-items-data="{{ itemCountTotal }}"
-                        template="#vue-item-list">
-                    </item-list> #}
+                    {# 
+                        <item-list :item-data="{{ itemList | json_encode }}" :total-items-data="{{ itemCountTotal }}" template="#vue-item-list"></item-list>
+                    #}
                 {# </div> #}
 
             </div>
@@ -80,7 +76,7 @@
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination :total-items="{{ itemCountTotal }}"></pagination>
+                    {% include "Ceres::Category.Item.Partials.Pagination" %}
                 </div>
             </div>
         {% endif %}
