ADD classes for each store special type

--- a/resources/views/Category/Item/Partials/CategoryListItem.twig
+++ b/resources/views/Category/Item/Partials/CategoryListItem.twig
@@ -49,7 +49,7 @@
             <div class="special-tags">
                 {% if  item.data.item.storeSpecial.id == 1 %}
 
-                    {% set storeSpecialColor = 'danger' %}
+                    {% set storeSpecialClasses = 'tag-offer bg-danger' %}
                     {% set percent = 0 %}
                     {% if item.data.prices.rrp is defined %}
                         {% set percent = (1 - item.data.prices.default.unitPrice.value / item.data.prices.rrp.price.value ) * -100 %}
@@ -63,23 +63,27 @@
 
                 {% elseif  item.data.item.storeSpecial.id == 2 %}
 
-                    {% set storeSpecialColor = 'primary' %}
+                    {% set storeSpecialClasses = 'tag-new bg-primary' %}
 
                 {% elseif  item.data.item.storeSpecial.id == 3 %}
 
-                    {% set storeSpecialColor = 'success' %}
+                    {% set storeSpecialClasses = 'tag-top bg-success' %}
+
+                {% else %}
+
+                    {% set storeSpecialClasses = 'bg-success' %}
 
                 {% endif %}
 
                 {% if item.data.item.storeSpecial.id > 0 %}
 
-                    <span class="tag bg-{{ storeSpecialColor }}">
+                    <span class="tag {{ storeSpecialClasses }}">
                         {{ storeSpecial }}
                     </span>
 
                 {% else %}
 
-                    <span class="tag bg-info">
+                    <span class="tag tag-bundle bg-info">
                         {{ trans("Ceres::Template.itemBundle") }}
                     </span>
 
