--- a/resources/views/ItemList/Components/ItemStoreSpecial.twig
+++ b/resources/views/ItemList/Components/ItemStoreSpecial.twig
@@ -3,7 +3,7 @@
         <span v-if="storeSpecial.id > 0" class="tag" v-bind:class="tagClass">
             ${ label }
         </span>
-        <span v-else class="tag bg-info">
+        <span v-else class="tag tag-bundle bg-info">
             {{ trans("Ceres::Template.itemBundle") }}
         </span>
     </div>
