ADD populate store directive to fill the vuex store with data

--- a/resources/views/Category/Item/Partials/ItemsPerPage.twig
+++ b/resources/views/Category/Item/Partials/ItemsPerPage.twig
@@ -1,5 +1,9 @@
 <div class="list-itemsperpage">
-    <select class="custom-select" @change="$store.dispatch('selectItemsPerPage', $event.target.value)">
+    <select
+        class="custom-select"
+        @change="$store.dispatch('selectItemsPerPage', $event.target.value)"
+        v-populate-store:mutation="{ name: 'setItemsPerPage', data: {{selectedValue}} }"
+    >
         {% for value in itemsPerPage %}
             <option value="{{ value }}"{% if value == selectedValue %} selected{% endif %}>
                 {{ value }}
