--- a/resources/views/Category/Item/Partials/ItemSorting.twig
+++ b/resources/views/Category/Item/Partials/ItemSorting.twig
@@ -1,5 +1,9 @@
 <div class="list-sort">
-    <select class="custom-select" @change="$store.dispatch('selectItemListSorting', $event.target.value)">
+    <select
+        class="custom-select"
+        @change="$store.dispatch('selectItemListSorting', $event.target.value)"
+        v-populate-store:mutation="{ name: 'setItemListSorting', data: '{{selectedSorting}}' }"
+    >
         {% for key, value in sortingData %}
             <option value="{{ key }}"{% if key == selectedSorting %}selected{% endif %}>{{ value }}</option>
         {% endfor %}
