UPDATE code style

--- a/resources/views/Category/Item/Partials/ItemSorting.twig
+++ b/resources/views/Category/Item/Partials/ItemSorting.twig
@@ -2,8 +2,7 @@
     <select
         class="custom-select"
         @change="$store.dispatch('selectItemListSorting', $event.target.value)"
-        v-populate-store:mutation="{ name: 'setItemListSorting', data: '{{selectedSorting}}' }"
-    >
+        v-populate-store:mutation="{ name: 'setItemListSorting', data: '{{selectedSorting}}' }">
         {% for key, value in sortingData %}
             <option value="{{ key }}"{% if key == selectedSorting %}selected{% endif %}>{{ value }}</option>
         {% endfor %}
