--- a/resources/views/Category/Item/Partials/ItemsPerPage.twig
+++ b/resources/views/Category/Item/Partials/ItemsPerPage.twig
@@ -1,9 +1,8 @@
 <div class="list-itemsperpage">
-    <select
+    <select 
         class="custom-select"
         @change="$store.dispatch('selectItemsPerPage', $event.target.value)"
-        v-populate-store:mutation="{ name: 'setItemsPerPage', data: {{selectedValue}} }"
-    >
+        v-populate-store:mutation="{ name: 'setItemsPerPage', data: {{selectedValue}} }">
         {% for value in itemsPerPage %}
             <option value="{{ value }}"{% if value == selectedValue %} selected{% endif %}>
                 {{ value }}
