--- a/resources/scss/ceres/views/Category/_category-list.scss
+++ b/resources/scss/ceres/views/Category/_category-list.scss
@@ -21,18 +21,27 @@
   position: absolute;
 }
 
-.product-list{
+.product-list {
 	list-style-type: none;
 	padding: 0;
 	margin-bottom: 0;
 
 	display: flex;
-	flex-flow: row wrap;
+    flex-flow: row wrap;
+    
+    category-item {
+        background: $white;
+        display: block;
+        height: 145px;
+        margin-bottom: 15px;
+        width: 100%;
 
-//	li{
-//        @include make-col-ready(12);
-//        @include make-col(12);
-//	}
+        @include media-breakpoint-up(sm) {
+            margin-bottom: 30px;
+            padding-bottom: calc(100% + 100px);
+            height: unset;
+        }
+    }
 }
 
 .lazy{
